# ai-agent-messaging

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  changelog.md  git.md  plans.md  tasks.md
examples/jobs/: daily_ai_briefing.yaml
examples/skills/: daily_ai_briefing.md
resources/memory-search/: SKILL.md
setup/: agents.yaml.template  bootstrap.py  init.sh  restart.py  status.py
src/: __init__.py  __main__.py
src/application/: __init__.py  app.py  command_router.py
src/config/: __init__.py  registry.py  settings.py
src/core/: __init__.py  errors.py  interfaces.py  models.py  subagents.py
src/gateway/: __init__.py  discord.py
src/jobs/: __init__.py  loader.py  models.py  registry.py  runtime.py  scheduler.py  store.py
src/memory/: frontmatter.py  init_docs.py  metadata.py  resume_context.py  search.py  snapshot.py  writer.py
src/observability/: __init__.py  context.py  logging.py
src/providers/: __init__.py  base.py  claude.py  codex.py  factory.py  gemini.py  subprocess_cli.py
src/runtime/: __init__.py  delivery.py  interactions.py  provider_runtime.py  session_manager.py  session_store.py  tools.py  transport.py
src/services/: __init__.py  command.py  command_router.py  conversation.py  messaging.py  provider_runtime.py  streaming.py
src/skills/: __init__.py  loader.py  models.py
src/tasks/: __init__.py  cron.py  loader.py  models.py  registry.py  runtime.py  scheduler.py  store.py
src/tools/: __init__.py  builtins.py  loader.py
tests/: test_app.py  test_codex_provider.py  test_command_router.py  test_discord_gateway.py  test_gateway.py  test_logging.py  test_memory.py  test_memory_search_tool_script.py  test_metadata.py  test_module_layout.py  test_provider_factory.py  test_services.py  test_session.py  test_settings.py  test_setup_bootstrap.py  test_stability.py  test_subagents.py  test_subprocess_provider.py  test_tasks.py  test_tools.py  test_transport.py
(+6 files in other folders)
